# masbcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_openmp.sh  compute_ma.cpp  masbcpp.sln
CMakeModules/: FindOpenMP.cmake
etc/: kdtree2_test.cpp
kdtree2/: kdtree2.cpp  kdtree2.hpp
masbcpp.xcodeproj/: project.pbxproj
masbcpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
masbcpp.xcodeproj/project.xcworkspace/xcshareddata/: masbcpp.xccheckout
masbcpp.xcodeproj/project.xcworkspace/xcuserdata/ravi.xcuserdatad/: UserInterfaceState.xcuserstate
masbcpp.xcodeproj/xcuserdata/ravi.xcuserdatad/xcschemes/: masbcpp.xcscheme  xcschememanagement.plist
src/: compute_ma.cpp  compute_ma.vcxproj  compute_ma.vcxproj.filters  compute_ma_processing.cpp  compute_ma_processing.h  compute_normals.cpp  compute_normals.vcxproj  compute_normals.vcxproj.filters  compute_normals_processing.cpp  compute_normals_processing.h  io.cpp  io.h  madata.h  masbcpp_processing.vcxproj  masbcpp_processing.vcxproj.filters  simplify.cpp  simplify.vcxproj  simplify.vcxproj.filters  simplify_processing.cpp  simplify_processing.h  types.h  version.h
vs_build/: .gitignore  compute_ma.vcxproj  compute_ma.vcxproj.filters  compute_normals.vcxproj  compute_normals.vcxproj.filters  masbcpp.sln  masbcpp_processing.vcxproj  masbcpp_processing.vcxproj.filters  simplify.vcxproj  simplify.vcxproj.filters  thirdparty.vcxproj  thirdparty.vcxproj.filters
